Sort by Country

--- a/app/src/main/res/layout/breeds_cat_item.xml
+++ b/app/src/main/res/layout/breeds_cat_item.xml
@@ -35,28 +35,26 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:text="Breed"
             android:textColor="#de000000"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/main_photo_image"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/main_photo_image"
             tools:text="@{item.name}" />
 
         <TextView
             android:id="@+id/price_value_text"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
-            android:maxLength="100"
             android:text="Description"
             android:textColor="#de000000"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="@+id/main_photo_image"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/main_photo_image"
             app:layout_constraintTop_toBottomOf="@+id/property_type_text"
